E-learning section added

--- a/index.html
+++ b/index.html
@@ -293,7 +293,41 @@
   <!-- popular course end  -->
 
 
-  
+  <!-- Explore the E-Learning Start -->
+  <section class="container my-4 py-4">
+    <div class="row bg-light my-4">
+        <div class="col-lg-5 col-md-6 col-sm-12 p-0">
+            <img class="img-fluid w-100" src="images/working.png" alt="">
+        </div>
+        <div class="col-lg-7 col-md-6 col-sm-12 d-flex justify-content-center flex-column p-4">
+            <h1 class="text-dark fs-1 fw-bold custom-font-size-02">Explore The elearning Institute</h1>
+            <p class="text-dark fs-5 fw-light lh-base custom-font-size-04">
+                We are providing best online tutorial on how to create stunishing cinematic video with your smartphone and just your regular computer using our video editing software. We have been working on this from 5 years to get optimized version of our video editing software <br><br>
+                You can now start trial of our video editing software for 30days totally free. No cost needed for using our software. You can use also smartphone like Android or Patti wala Apple device.</p>
+            <div class="row py-4 py-md-1">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6">
+                    <h2 class="text-dark fw-semibold fs-1 custom-font-size-03">3.2K+</h2>
+                    <p class="text-secondary fw-regular fs-5 lh-base custom-font-size-05">Online Course</p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6">
+                    <h2 class="text-dark fw-semibold fs-1 custom-font-size-03">600+</h2>
+                    <p class="text-secondary fw-regular fs-5 lh-base custom-font-size-05">Expert member</p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6">
+                    <h2 class="text-dark fw-semibold fs-1 custom-font-size-03">1k+</h2>
+                    <p class="text-secondary fw-regular fs-5 lh-base custom-font-size-05">Rating & Review</p>
+                </div>
+            </div>
+            <div>
+                <a href="" class="btn btn-primary bg-primary text-light fw-regular text-uppercase fs-5 px-4 py-2">Read More</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Explore the E-Learning End -->
+
+
 
 
     </main>
