Join section added

--- a/index.html
+++ b/index.html
@@ -77,18 +77,17 @@
                                     <div class="modal-body">
                                         <form>
                                             <div class="mb-3">
-                                                <label for="exampleInputName" class="form-label">Type Your Full
+                                                <label for="exampleInputName" class="form-label">Enter Your Full
                                                     Name</label>
                                                 <input type="text" class="form-control" id="exampleInputName"
                                                     aria-describedby="emailHelp">
 
                                             </div>
                                             <div class="mb-3">
-                                                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                                <label for="exampleInputEmail1" class="form-label">E-mail address</label>
                                                 <input type="email" class="form-control" id="exampleInputEmail1"
                                                     aria-describedby="emailHelp">
-                                                <div id="emailHelp" class="form-text">We'll never share your email with
-                                                    anyone else.</div>
+                                                <div id="emailHelp" class="form-text">We don't share your info to anyone.</div>
                                             </div>
                                             <div class="mb-3">
                                                 <label for="exampleInputPassword1" class="form-label">Password</label>
@@ -97,7 +96,7 @@
                                             <div class="mb-3 form-check">
                                                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                                 <label class="form-check-label" for="exampleCheck1">Agree with Our
-                                                    Tearms</label>
+                                                    terms and conditions</label>
                                             </div>
                                             <button type="submit" class="btn btn-primary">Register</button>
                                         </form>
@@ -327,6 +326,67 @@
 
 <!-- Explore the E-Learning End -->
 
+<!-- Ready to Join -->
+<section class="container my-4 custom-margin-ready-to-join" id="register-section">
+  <div class="row p-4 mx-lg-0 mx-md-0 mx-sm-0 mx-2 bg-primary rounded-3 custom-padding-read-to-join">
+      <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-center custom-content-position-01">
+          <h2 class="text-light fw-bold fs-1 lh-base">Ready to join?</h2>
+          <p class="text-light fw-light fs-5 lh-base">We are providing you best online naseed streming service. It's highly compressed for your storage and with high quality audio optimized by fl studio.</p>
+      </div>
+      <div class="col-lg-6 col-md-12 d-flex flex-column align-items-end justify-content-center custom-button-position">
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-lg btn-light text-primary" data-bs-toggle="modal" data-bs-target="#registerNow">
+              Register Now
+          </button>
+      </div>
+
+      <!-- Modal -->
+      <div class="modal fade" id="registerNow" tabindex="-1" aria-labelledby="registerNowLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="registerNowLabel">Register Now</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="mb-3">
+                    <label for="exampleInputName" class="form-label">Type Your Full
+                        Name</label>
+                    <input type="text" class="form-control" id="exampleInputName"
+                        aria-describedby="emailHelp">
+
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1"
+                        aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">We'll never share your email with
+                        anyone else.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Agree with Our
+                        Tearms</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Register</button>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary"
+                data-bs-dismiss="modal">Close</button>
+
+            </div>
+        </div>
+        </div>
+    </div>
+      
+</div>
+</section>
 
 
 
