--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
 
    <!-- Frequently Ask Question -->
-   <section class="container d-flex flex-column justify-content-center align-items-center custom-padding-frequently-ask">
+   <section class="container d-flex flex-column justify-content-center align-items-center custom-padding-frequently-ask mt-3">
     <div class="d-flex flex-column align-items-center justify-content-center w-50 custom-content-width-01">
         <h1 class="text-dark fw-bold fs-1 py-2">Frequently Ask Question</h1>
         <p class="text-center text-dark fw-light fs-6 pb-4">You may have some question about our company or our service, we have set some FAQ so that you can get some quick answers of your questions.</p>
@@ -451,8 +451,8 @@
     </div>
 </section>
 
-<!-- Companies -->
-<section class="container d-none d-lg-block">
+<!-- Companies Section Start -->
+<section class="container d-none d-lg-block mt-5 mb-5">
     <h2 class="text-center text-dark py-4 fw-bold fs-1">Trusted by over 800+ companies</h2>
     <div class="row pb-4 text-center">
         <div class="col py-2"><img src="images/company/company-1.png" alt=""></div>
@@ -463,9 +463,28 @@
     </div>
 </section>
 
-    <!-- Footer Section  -->
+<!-- Companies Section End -->
 
+     <!-- Footer section Start -->
+     <footer class="bg-dark custom-footer ps-2">
+        <div class="container text-center ">
+            <h2 class="text-light fw-semibold fs-3 ">E-learning Institute</h2>
+            <p class="text-light fw-light text-center py-2">Office 41, Zawaya Buildin, Ghala Muscat,<br>
+                Sultanate of Oman <br>
+                Privacy Policy | Terms of use</p>
+            <div class="d-flex flex-column justify-content-center align-items-center w-100">
+                <ul class="d-flex flex-row p-0 list-unstyled">
+                    <li><a class="text-dark p-2 m-2 custom-icon-style bg-light d-block text-center rounded-circle" href="" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a class="text-dark p-2 m-2 custom-icon-style bg-light d-block text-center rounded-circle" href="" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a class="text-dark p-2 m-2 custom-icon-style bg-light d-block text-center rounded-circle" href="" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    
+                </ul>
+            </div>
+            
+        </div>
+    </footer>
 
+    <!-- Footer Section End  -->
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
