--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
+        <link rel="icon" type="image/x-icon" href="/images/icon.jpg">    
+
     <!-- style file -->
     <link rel="stylesheet" href="style.css">
 
@@ -43,20 +45,17 @@
                         <li class="nav-item mx-3">
                             <a class="nav-link" href="#courses">Course</a>
                         </li>
-                        <a class="nav-link mx-3" href="#deals">Deals</a>
+                        <a class="nav-link mx-3" href="#">Deals</a>
                         </li>
-                        <a class="nav-link mx-3" href="#success">Success</a>
+                        <a class="nav-link mx-3" href="#">Success</a>
                         </li>
-                        <a class="nav-link mx-3" href="#about">About</a>
+                        <a class="nav-link mx-3" href="#">About</a>
                         </li>
                         <a class="nav-link mx-3" href="#register">Register</a>
                         </li>
 
 
                     </ul>
-
-                    <!-- modal -->
-
 
                     <div class="register">
                         <button type="button" class="btn btn-outline-primary font-we fw-semibold fs-5 px-5 py-2"
@@ -110,16 +109,14 @@
                             </div>
                         </div>
                     </div>
-
-
-
-
-
                 </div>
             </div>
         </nav>
     </header>
+
+
     <main>
+
        <!-- carousel start -->
        <section class="container ">
         <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="false">
@@ -193,7 +190,7 @@
      <section class="container mt-5" id="courses">
       <div class="d-flex flex-column align-items-center custom-popular-course-title">
           <h2 class="text-dark fw-bold fs-1 w-50 text-center">Discover Our Popular Courses</h2>
-          <p class="text-dark fw-light fs-5 w-50 text-center">Checkout our varius edTech Courses from our website. Now you can learn form online totaly at low cost.</p>
+          <p class="text-dark fw-light fs-5 w-50 text-center">Explore our E-learning Courses from our website.Learning is your door at minimal cost.</p>
       </div>
       <div>
           <div class="row g-4">
@@ -205,8 +202,8 @@
                       </div>
                       <div class="col-lg-8 col-md-8 col-sm-12 p-0 pe-4 ps-2 d-flex flex-column justify-content-center custom-card-info-01">
                           <h2 class="text-dark fw-semibold fs-3">Fundamental Of UI/UX Design</h2>
-                          <p class="text-dark fw-light fs-5">Learn awesome UI/UX Design at low cost, you can't never imagine how cool it is.</p>
-                          <span class="text-primary fs-4 fw-bold">Price : 99.99$</span>
+                          <p class="text-dark fw-light fs-5">Explore best UI/UX Design with us </p>
+                          <span class="text-primary fs-4 fw-bold">Price :$50</span>
                       </div>
                   </div>
               </div>
@@ -219,8 +216,8 @@
                       </div>
                       <div class="col-lg-8 col-md-8 col-sm-12 p-0 pe-4 ps-2 d-flex flex-column justify-content-center custom-card-info-01">
                           <h2 class="text-dark fw-semibold fs-3">Fundamental Of C/C++</h2>
-                          <p class="text-dark fw-light fs-5">Our New C/C++ Tutorial has arrived, here you will learn about full C/C++ language.</p>
-                          <span class="text-primary fs-4 fw-bold">Price : 49.99$</span>
+                          <p class="text-dark fw-light fs-5">Explore C & C+ programming language with us</p>
+                          <span class="text-primary fs-4 fw-bold">Price : $50</span>
                       </div>
                   </div>
               </div>
@@ -233,8 +230,8 @@
                       </div>
                       <div class="col-lg-8 col-md-8 col-sm-12 p-0 pe-4 ps-2 d-flex flex-column justify-content-center custom-card-info-01">
                           <h2 class="text-dark fw-semibold fs-3">Fundamental Of Web Design</h2>
-                          <p class="text-dark fw-light fs-5">Lean easiest way to learn web design from our webstie. This couse is on sale now.</p>
-                          <span class="text-primary fs-4 fw-bold">Price : 149.99$</span>
+                          <p class="text-dark fw-light fs-5">We offer you best web design course.</p>
+                          <span class="text-primary fs-4 fw-bold">Price :$75</span>
                       </div>
                   </div>
               </div>
@@ -247,8 +244,8 @@
                       </div>
                       <div class="col-lg-8 col-md-8 col-sm-12 p-0 pe-4 ps-2 d-flex flex-column justify-content-center custom-card-info-01">
                           <h2 class="text-dark fw-semibold fs-3">Fundamental Of APP Design</h2>
-                          <p class="text-dark fw-light fs-5">Learn Quickly Android Or Patti wala ios device App Design Using Flutter & Dart.</p>
-                          <span class="text-primary fs-4 fw-bold">Price : 199.99$</span>
+                          <p class="text-dark fw-light fs-5">Learn Android & ios apps developed with React native </p>
+                          <span class="text-primary fs-4 fw-bold">Price :$100</span>
                       </div>
                   </div>
               </div>
@@ -261,8 +258,8 @@
                       </div>
                       <div class="col-lg-8 col-md-8 col-sm-12 p-0 pe-4 ps-2 d-flex flex-column justify-content-center custom-card-info-01">
                           <h2 class="text-dark fw-semibold fs-3">Concept of Content Creating</h2>
-                          <p class="text-dark fw-light fs-5">Learn Effective steps to grow your content creating for youtube or facebook page.</p>
-                          <span class="text-primary fs-4 fw-bold">Price : 99.99$</span>
+                          <p class="text-dark fw-light fs-5">Learn Content creating with best mentor.</p>
+                          <span class="text-primary fs-4 fw-bold">Price : $75</span>
                       </div>
                   </div>
               </div>
@@ -275,8 +272,8 @@
                       </div>
                       <div class="col-lg-8 col-md-8 col-sm-12 p-0 pe-4 ps-2 d-flex flex-column justify-content-center custom-card-info-01">
                           <h2 class="text-dark fw-semibold fs-3">Motion Graphics Design</h2>
-                          <p class="text-dark fw-light fs-5">Learn Motion Graphics with our instructor Motion Mia, He is best.</p>
-                          <span class="text-primary fs-4 fw-bold">Price : 119.99$</span>
+                          <p class="text-dark fw-light fs-5">Explore Motion Graphics with best mentor</p>
+                          <span class="text-primary fs-4 fw-bold">Price : $75</span>
                       </div>
                   </div>
               </div>
@@ -301,8 +298,7 @@
         <div class="col-lg-7 col-md-6 col-sm-12 d-flex justify-content-center flex-column p-4">
             <h1 class="text-dark fs-1 fw-bold custom-font-size-02">Explore The elearning Institute</h1>
             <p class="text-dark fs-5 fw-light lh-base custom-font-size-04">
-                We are providing best online tutorial on how to create stunishing cinematic video with your smartphone and just your regular computer using our video editing software. We have been working on this from 5 years to get optimized version of our video editing software <br><br>
-                You can now start trial of our video editing software for 30days totally free. No cost needed for using our software. You can use also smartphone like Android or Patti wala Apple device.</p>
+                E-learning has proved to be the best means in the corporate sector, especially when training programs are conducted by MNCs for professionals across the globe and employees are able to acquire important skills while sitting in a board room, or by having seminars, which are conducted for employees of the same or the different organizations under one roof. The schools which use E-learning technologies are a step ahead of those which still have the traditional approach towards learning.</p>
             <div class="row py-4 py-md-1">
                 <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                     <h2 class="text-dark fw-semibold fs-1 custom-font-size-03">3.2K+</h2>
@@ -327,7 +323,7 @@
 <!-- Explore the E-Learning End -->
 
 <!-- Ready to Join -->
-<section class="container my-4 custom-margin-ready-to-join" id="register-section">
+<section class="container my-4 custom-margin-ready-to-join mt-5 mb-5" id="register">
   <div class="row p-4 mx-lg-0 mx-md-0 mx-sm-0 mx-2 bg-primary rounded-3 custom-padding-read-to-join">
       <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-center custom-content-position-01">
           <h2 class="text-light fw-bold fs-1 lh-base">Ready to join?</h2>
@@ -389,7 +385,7 @@
 </section>
 
 
-   <!-- Frequently Ask Question -->
+   <!-- Frequently Ask Question Start -->
    <section class="container d-flex flex-column justify-content-center align-items-center custom-padding-frequently-ask mt-3">
     <div class="d-flex flex-column align-items-center justify-content-center w-50 custom-content-width-01">
         <h1 class="text-dark fw-bold fs-1 py-2">Frequently Ask Question</h1>
@@ -404,7 +400,7 @@
             </h2>
             <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
             <div class="accordion-body text-dark fw-light">
-                The basic difference between CSS Grid Layout and CSS Flexbox Layout is that flexbox was designed for layout in one dimension - either a row or a column. Grid was designed for two-dimensional layout - rows, and columns at the same time.
+                Grid is made for two-dimensional layout while Flexbox is for one. This means Flexbox can work on either row or columns at a time, but Grids can work on both. Flexbox, gives you more flexibility while working on either element
             </div>
             </div>
         </div>
@@ -430,7 +426,7 @@
             </h2>
             <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body text-dark fw-light">
-                    The CSS box model is a container that contains multiple properties including borders, margin, padding, and the content itself.
+                    The CSS box model is a container that contains multiple properties including borders, margin, padding, and the content itself. It is used to create the design and layout of web pages. It can be used as a toolkit for customizing the layout of different elements. The web browser renders every element as a rectangular box according to the CSS box model. Box-Model has multiple properties in CSS. 
                 </div>
             </div>
           </div>                
@@ -450,6 +446,8 @@
         
     </div>
 </section>
+
+ <!-- Frequently Ask Question End -->
 
 <!-- Companies Section Start -->
 <section class="container d-none d-lg-block mt-5 mb-5">
@@ -492,5 +490,6 @@
         crossorigin="anonymous"></script>
 
     </body>
+    </html>
 
 
